Also specify a default StyleName for fonts

Summary:
When saving, kcm_fonts adds the default selected StyleName,
so it needs to specified here as well to avoid mismatches.

BUG: 383191

Test Plan:
Ran pkcon install with no kdeglobals.
Without this change: Bold title in the auth dialog
With this change:  Normal title in the auth dialog

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D7160