src/platformtheme/kfontsettingsdatamac.mm
@@ -49,17 +49,17 @@ static const char *LocalDefaultFont = NULL;
 // See README.fonts.txt for information and thoughts about native/default fonts
 
 KFontData DefaultFontData[KFontSettingsDataMac::FontTypesCount] = {
-    { GeneralId, "font",                 DefaultFont,       12, -1, QFont::SansSerif },
-    { GeneralId, "fixed",                DefaultFixedFont,  10, -1, QFont::Monospace },
-    { GeneralId, "toolBarFont",          DefaultFont,       10, -1, QFont::SansSerif },
-    { GeneralId, "menuFont",             DefaultFont,       14, -1, QFont::SansSerif },
+    { GeneralId, "font",                 DefaultFont,       12, -1, QFont::SansSerif, "Medium" },
+    { GeneralId, "fixed",                DefaultFixedFont,  10, -1, QFont::Monospace, "Regular" },
+    { GeneralId, "toolBarFont",          DefaultFont,       10, -1, QFont::SansSerif, "Medium" },
+    { GeneralId, "menuFont",             DefaultFont,       14, -1, QFont::SansSerif, "Medium" },
     // applications don't control the window titlebar fonts
-    { "WM",      "activeFont",           DefaultFont,       13, -1, QFont::SansSerif },
-    { GeneralId, "taskbarFont",          DefaultFont,        9, -1, QFont::SansSerif },
-    { GeneralId, "smallestReadableFont", DefaultFont,        9, -1, QFont::SansSerif },
+    { "WM",      "activeFont",           DefaultFont,       13, -1, QFont::SansSerif, "Medium" },
+    { GeneralId, "taskbarFont",          DefaultFont,        9, -1, QFont::SansSerif, "Medium" },
+    { GeneralId, "smallestReadableFont", DefaultFont,        9, -1, QFont::SansSerif, "Medium" },
     // this one is to accomodate for the MessageBoxFont which should be bold on OS X
     // when using the native theme fonts.
-    { GeneralId, "messageBoxFont",       DefaultFont,       13, QFont::Bold, QFont::SansSerif }
+    { GeneralId, "messageBoxFont",       DefaultFont,       13, QFont::Bold, QFont::SansSerif, "Bold" }
 };
 
 static const char *fontNameFor(QFontDatabase::SystemFont role)
@@ -208,6 +208,7 @@ QFont *KFontSettingsDataMac::font(FontTypes fontType)
 
         cachedFont = new QFont(QLatin1String(fontData.FontName), fontData.Size, forceBold? QFont::Bold : fontData.Weight);
         cachedFont->setStyleHint(fontData.StyleHint);
+        cachedFont->setStyleName(QLatin1String(fontData.StyleName));
 //         if (qEnvironmentVariableIsSet("QT_QPA_PLATFORMTHEME_VERBOSE")) {
 //             qCWarning(PLATFORMTHEME) << "Requested font type" << fontType << "name=" << fontData.FontName << "forceBold=" << forceBold << "styleHint=" << fontData.StyleHint;
 //             qCWarning(PLATFORMTHEME) << "\t->" << *cachedFont;
